[package]
name = "commander"
version = "0.0.0"
authors = [ "https://github.com/samyatchmenoff" ]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.graphics]
git = "https://github.com/PistonDevelopers/rust-graphics.git"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs.git"

[dependencies.glfw_game_window]
git = "https://github.com/PistonDevelopers/glfw_game_window.git"

[dependencies.opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.libvorbisfile]
git = "https://github.com/tari/vorbisfile.rs.git"

[dependencies.openal-rs]
git = "https://github.com/bjz/openal-rs.git"
